# ArmorPass

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: encryption.rs  generator.rs  lib.rs  main.rs  password_manager.rs  shell.rs  strings.rs  utility.rs
tests/: integration_tests.rs
