[package]
name = "ArmorPass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3.0"
openssl = "0.10.63"
prettytable-rs = "0.10.0"
rand = "0.8.5"
serde = { version = "1.0.196", features = [ "derive" ] }
serde_json = "1.0.111"

[dev-dependencies]
uuid = { version = "1.7", features = ["v4"] }
